--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+kl<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,6 @@
 </head>
 <body>
     
-    
+    <p> hello everyone </p>
 </body>
 </html>
