--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@ kl<!DOCTYPE html>
 <body>
     
     <p> hello everyone EY </p>
+<p> my name is sheryll baccay i am the best of the most available in the country given the circumstances of being a white woman a woman of no color.</p>
+    <h1> alexa cueto lives in makati city she is ohjjjhjhjjh yeah!</h1>
+    <h5> my name is bini mikha i am a red head i am pretty i am amazing booooooooooom go daddy charles michael pua</h5>
 </body>
 </html>
