--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-kl<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,10 +8,25 @@ kl<!DOCTYPE html>
     </style>
 </head>
 <body>
-    
-    <p> hello everyone EY </p>
-<p> my name is sheryll baccay i am the best of the most available in the country given the circumstances of being a white woman a woman of no color.</p>
-    <h1> alexa cueto lives in makati city she is ohjjjhjhjjh yeah!</h1>
-    <h5> my name is bini mikha i am a red head i am pretty i am amazing booooooooooom go daddy charles michael pua</h5>
-</body>
+    <form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputFile">File input</label>
+    <input type="file" id="exampleInputFile">
+    <p class="help-block">Example block-level help text here.</p>
+  </div>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox"> Check me out
+    </label>
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
 </html>
