--- a/productspage.html
+++ b/productspage.html
@@ -43,7 +43,7 @@
             display: flex;
             align-items: center;
             gap: 5px;
-            border: 2px solid #D21885;
+            border: 2px solid #CF388D;
             padding: 5px;
             border-radius: 25px;
             margin-right: 20px; /* Added right margin */
@@ -63,10 +63,14 @@
             height: 20px;
             width: 20px;
         }
+        .golden-line{
+            height: 4px;
+            background-color: #C49F24;
+        }
         .banner {
             text-align: center;
-            background-color: #f06292;
-            color: white;
+            background-color: white ;
+            color: #CF388D;
             padding: 20px 0;
         }
         .content {
@@ -98,6 +102,9 @@
             <input type="text" placeholder="Search...">
         </div>
     </div>
+
+    <div class="golden-line"> </div> <!-- Golden line added here -->
+
 
     <div class="banner">
         <h1>OUR CONDITIONER COLLECTION</h1>
