--- a/productspage.html
+++ b/productspage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cream Silk</title>
+    <link rel="stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -54,6 +55,9 @@
             padding: 5px;
             border-radius: 25px;
         }
+        .search-bar i {
+            color: #D21885;
+        }
         .search-bar button {
             border: none;
             background: none;
@@ -99,7 +103,9 @@
             <a href="#">About Us</a>
         </div>
         <div class="search-bar">
+            <i class="fa fa-search" aria-hidden="true"></i>
             <input type="text" placeholder="Search...">
+            <i class="fa fa-microphone" aria-hidden="true"></i>
         </div>
     </div>
 
