--- a/productspage.html
+++ b/productspage.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cream Silk</title>
+    <!--==FontAwesome Icons-->
     <link rel="stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <!--==Open Sans Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    
+
+    <!--==Internal CSS-->
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+        font-family: "Open Sans", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: weight;
+        font-style: normal;
+        font-variation-settings:
+        "wdth" 100;
+        margin: 0;
+        padding: 0;
         }
         .header {
             background-color: #ffffff;
@@ -20,14 +33,16 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         .header img {
+            height:max-content;
             max-height: 40px; 
             margin-left: 50px; 
         }
 
         .header a{
-            padding: 30px;
+            padding: 20px;
             margin-left: 10px;
-            margin-right: 10px
+            margin-right: 10px;
+            font-size: 100px;
         }
 
         .nav {
