--- a/productspage.html
+++ b/productspage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cream Silk</title>
     <!--==FontAwesome Icons-->
-    <link rel="stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <!--==Open Sans Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,14 +15,14 @@
     <!--==Internal CSS-->
     <style>
         body {
-        font-family: "Open Sans", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: weight;
-        font-style: normal;
-        font-variation-settings:
-        "wdth" 100;
-        margin: 0;
-        padding: 0;
+            font-family: "Open Sans", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: weight;
+            font-style: normal;
+            font-variation-settings:
+            "wdth" 100;
+            margin: 0;
+            padding: 0;
         }
         .header {
             background-color: #ffffff;
@@ -38,7 +38,7 @@
             margin-left: 50px; 
         }
 
-        .header a{
+        .header a {
             padding: 20px;
             margin-left: 10px;
             margin-right: 10px;
@@ -62,7 +62,7 @@
             border: 2px solid #CF388D;
             padding: 5px;
             border-radius: 25px;
-            margin-right: 20px; /* Added right margin */
+            margin-right: 20px; 
         }
         .search-bar input {
             border: none;
@@ -82,30 +82,43 @@
             height: 20px;
             width: 20px;
         }
-        .golden-line{
+        .golden-line {
             height: 4px;
             background-color: #C49F24;
+            margin: 0;
         }
         .banner {
             text-align: center;
-            background-color: white ;
+            background-color: white;
             color: #CF388D;
-            padding: 20px 0;
+            padding: 0; 
+            margin: 0; 
         }
         .content {
             text-align: center;
-            padding: 20px;
+            padding: 0; 
             background-color: #fdfdfd;
+            margin: 0; 
         }
         .content img {
             max-width: 100%;
             height: auto;
+            display: block;
+            margin: 0 auto; 
         }
         .footer {
             text-align: center;
             padding: 20px;
             background-color: #f1f1f1;
             color: #333;
+        }
+        @media (min-width: 1024px) {
+            .header img{
+                max-height: 50px;
+            }
+            .nav a {
+                font-size: 24px; 
+            }
         }
     </style>
 </head>
@@ -124,8 +137,7 @@
         </div>
     </div>
 
-    <div class="golden-line"> </div> <!-- Golden line added here -->
-
+    <div class="golden-line"></div> <!-- Golden line added here -->
 
     <div class="banner">
         <h1>OUR CONDITIONER COLLECTION</h1>
