--- a/productspage.html
+++ b/productspage.html
@@ -112,9 +112,15 @@
             background-color: #f1f1f1;
             color: #333;
         }
-        @media (min-width: 1024px) {
+        @media (min-width: 1024px) { /* For larger screens like laptop */
             .header img{
                 max-height: 50px;
+            }
+            .search-bar {
+                width: 300px; 
+            }
+            .search-bar input {
+                width: 100%; 
             }
             .nav a {
                 font-size: 24px; 
