--- a/index.html
+++ b/index.html
@@ -3,30 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    </style>
+    <title>Cream Silk</title>
+    <!--==FontAwesome Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <!--==Open Sans Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <!--==External CSS-->
+    <link rel="stylesheet" href="assets/stylesheet.css">
 </head>
 <body>
-    <form>
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputFile">File input</label>
-    <input type="file" id="exampleInputFile">
-    <p class="help-block">Example block-level help text here.</p>
-  </div>
-  <div class="checkbox">
-    <label>
-      <input type="checkbox"> Check me out
-    </label>
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
+    <div class="header">
+        <img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo">
+        <div class="nav">
+            <a href="products.html">Products</a>
+            <a href="about.html">About Us</a>
+        </div>
+        <div class="search-bar">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <input type="text" placeholder="Search...">
+            <i class="fa fa-microphone" aria-hidden="true"></i>
+        </div>
+    </div>
+
+    <div class="golden-line"></div>
+
+    <div class="banner">
+        <img src="image.png" alt="Banner Image">
+        <h1>BE CONDITIONED FOR GREATER</h1>
+        <p>OUR SOLUTION FOR THE MODERN FILIPINA HERE:</p>
+    </div>
+
+    <div class="footer">
+        <p>&copy; 2024 Cream Silk. All Rights Reserved.</p>
+    </div>
+</body>
 </html>
