--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header">
         <img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo">
         <div class="nav">
-            <a href="products.html">Products</a>
+            <a href="productspage.html">Products</a>
             <a href="about.html">About Us</a>
         </div>
         <div class="search-bar">
