--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cream Silk</title>
-    <!--==FontAwesome Icons-->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <!--==Open Sans Fonts-->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <!--==External CSS-->
+
     <link rel="stylesheet" href="assets/stylesheet.css">
 </head>
 <body>
@@ -30,9 +30,11 @@
     <div class="golden-line"></div>
 
     <div class="banner">
-        <img src="image.png" alt="Banner Image">
-        <h1>BE CONDITIONED FOR GREATER</h1>
-        <p>OUR SOLUTION FOR THE MODERN FILIPINA HERE:</p>
+        <img src="assets/creamsilk-banner.jpg" alt="Banner Image">
+        <div class="banner-text">
+            <h1>BE CONDITIONED FOR GREATER</h1>
+            <p>OUR SOLUTION FOR THE MODERN FILIPINA HERE:</p>
+        </div>
     </div>
 
     <div class="footer">
