--- a/productspage-conditioner.html
+++ b/productspage-conditioner.html
@@ -263,8 +263,22 @@
                 </div>
                 <button>BUY NOW</button>
             </div>
+            <div class="product-card">
+                <img src="https://shorturl.at/ooSce" alt="Product 5">
+                <h3>Cream Silk Ultimate Reborn Long & Luscious Tri-Oleo Conditioner</h3>
+                <div class="stars">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <button>BUY NOW</button>
+            </div>
         </div>
     </div>
+
+    <div class="golden-section"></div>
 
     <div class="footer">
         <p>&copy; 2024 Cream Silk. All Rights Reserved.</p>
