--- a/about-us-page.html
+++ b/about-us-page.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cream Silk</title>
-    <!--==FontAwesome Icons-->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <!--==Open Sans Fonts-->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
-    <!--==Internal CSS-->
     <style>
         body {
             font-family: "Open Sans", sans-serif;
@@ -100,7 +99,7 @@
             background-color: #f1f1f1;
             color: #333;
         }
-        @media (min-width: 1024px) { /* For larger screens like laptop */
+        @media (min-width: 1024px) { 
             .search-bar {
                 width: 300px; 
             }
@@ -127,7 +126,7 @@
         </div>
     </div>
 
-    <div class="golden-line"></div> <!-- Golden line added here -->
+    <div class="golden-line"></div> 
 
     <div class="banner">
         <h1>ABOUT US</h1>
