--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo">
         <div class="nav">
             <a href="productspage.html">Products</a>
-            <a href="about.html">About Us</a>
+            <a href="about-us-page.html">About Us</a>
         </div>
         <div class="search-bar">
             <i class="fa fa-search" aria-hidden="true"></i>
