--- a/productspage-conditioner.html
+++ b/productspage-conditioner.html
@@ -81,7 +81,7 @@
             width: 20px;
         }
         .golden-line {
-            height: 2px;
+            height: 4px;
             background-color: #C49F24;
             margin: 0;
         }
@@ -153,6 +153,11 @@
             padding: 10px 20px;
             cursor: pointer;
             font-size: 16px;
+        }
+        .pink-line{
+            height: 4px;
+            background-color: #D21885;
+            margin: 0;
         }
         .footer {
             text-align: center;
@@ -264,7 +269,7 @@
                 <button>BUY NOW</button>
             </div>
             <div class="product-card">
-                <img src="https://assets.unileversolutions.com/v1/38908691.png?im=Resize,width=768,height=768" alt="Product 5">
+                <img src="https://cdn.sanity.io/images/xmpcmhrn/production/a2715a77d94afcb3d89186a9e5ab63f63c2a51a6-1024x1024.jpg?w=752&q=80&fit=max&auto=format" alt="Product 5">
                 <h3>Cream Silk Ultimate Reborn Long & Luscious Tri-Oleo Conditioner</h3>
                 <div class="stars">
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -279,6 +284,7 @@
     </div>
 
     <div class="golden-section"></div>
+    <div class="pink-line"></div>
 
     <div class="footer">
         <p>&copy; 2024 Cream Silk. All Rights Reserved.</p>
