--- a/productspage-conditioner.html
+++ b/productspage-conditioner.html
@@ -10,257 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-
-    <!--==Internal CSS-->
-    <style>
-        body {
-            font-family: "Open Sans", sans-serif;
-            font-optical-sizing: auto;
-            font-weight: weight;
-            font-style: normal;
-            font-variation-settings: "wdth" 100;
-            margin: 0;
-            padding: 0;
-        }
-        .header {
-            background-color: #ffffff;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .header img {
-            height: max-content;
-            max-height: 40px; 
-            margin-left: 50px; 
-        }
-
-        .header a {
-            padding: 20px;
-            margin-left: 10px;
-            margin-right: 10px;
-            font-size: 100px;
-        }
-
-        .nav {
-            display: flex;
-            gap: 20px;
-        }
-        .nav a {
-            text-decoration: none;
-            color: #D21885;
-            font-weight: bold;
-            font-size: 16px;
-        }
-        .search-bar {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-            border: 2px solid #CF388D;
-            padding: 5px;
-            border-radius: 25px;
-            margin-right: 20px; 
-        }
-        .search-bar input {
-            border: none;
-            outline: none;
-            padding: 5px;
-            border-radius: 25px;
-        }
-        .search-bar i {
-            color: #D21885;
-        }
-        .search-bar button {
-            border: none;
-            background: none;
-            cursor: pointer;
-        }
-        .search-bar img {
-            height: 20px;
-            width: 20px;
-        }
-        .golden-line {
-            height: 2px;
-            background-color: #C49F24;
-            margin: 0;
-        }
-        .banner {
-            text-align: center;
-            background-color: white;
-            color: #CF388D;
-            padding: 0; 
-            margin: 0; 
-        }
-        .content {
-            text-align: center;
-            padding: 0; 
-            background-color: #fdfdfd;
-            margin: 0; 
-        }
-        .content img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 0 auto;
-        }
-        .golden-section {
-            background: linear-gradient(to bottom, #CEAE37, #FFE3B3);
-            padding: 20px 0;
-            height: 0;
-        }
-        .products-section {
-            background-color: #D21885;
-            padding: 20px 0;
-        }
-        .products {
-            display: flex;
-            flex-wrap: wrap; 
-            justify-content: center;
-            gap: 20px;
-            padding: 20px;
-        }
-        .product-card {
-            background-color: white;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            text-align: center;
-            padding: 20px;
-            width: 300px; 
-            margin-bottom: 20px; 
-            position: relative; /* Required for absolute positioning */
-        }
-        .product-card img {
-            width: 100%;
-            height: auto;
-            border-bottom: 1px solid #ddd;
-            padding-bottom: 20px;
-            margin-bottom: 20px;
-        }
-        .product-card .product-hover-image {
-            display: none;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: auto;
-            z-index: 1;
-        }
-        .product-card:hover .product-hover-image {
-            display: block;
-        }
-        .product-card h3 {
-            color: #D21885;
-            font-size: 18px;
-            margin: 0 0 10px;
-        }
-        .product-card .stars {
-            color: #FFD700;
-            margin-bottom: 20px;
-        }
-        .product-card button {
-            background-color: #D21885;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        .footer {
-            background-color: #fff;
-            color: #d5199b;
-            padding: 20px 0;
-            text-align: center;
-            border-top: 5px solid #d5199b;
-        }
-        .footer .container {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-        }
-        .footer .container div {
-            flex: 1;
-            margin: 10px;
-            min-width: 200px;
-        }
-        .footer .shop-now h3,
-        .footer .sitemap h3,
-        .footer .join-pack h3 {
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-        .footer .shop-now img {
-            display: block;
-            margin: 10px auto;
-            max-width: 100px;
-        }
-        .footer .sitemap ul {
-            list-style: none;
-            padding: 0;
-        }
-        .footer .sitemap ul li {
-            margin: 5px 0;
-        }
-        .footer .sitemap ul li a {
-            color: #d5199b;
-            text-decoration: none;
-        }
-        .footer .join-pack p {
-            font-size: 14px;
-            color: #d5199b;
-            margin: 10px 0;
-        }
-        .footer .join-pack input {
-            padding: 10px;
-            margin: 10px 0;
-            width: calc(100% - 22px);
-            border: 1px solid #d5199b;
-            color: #d5199b;
-        }
-        .footer .join-pack button {
-            padding: 10px 20px;
-            background-color: #d5199b;
-            color: #fff;
-            border: none;
-            cursor: pointer;
-        }
-        .footer .bottom {
-            background-color: #d5199b;
-            color: #fff;
-            padding: 10px 0;
-            margin-top: 20px;
-        }
-        .footer .bottom a {
-            color: #fff;
-            margin: 0 10px;
-            text-decoration: none;
-        }
-        @media (min-width: 1024px) { /* For larger screens like laptop */
-            .header img {
-                max-height: 50px;
-            }
-            .search-bar {
-                width: 300px; 
-            }
-            .search-bar input {
-                width: 100%; 
-            }
-            .nav a {
-                font-size: 24px; 
-            }
-            .content img {
-                width: 100%;
-            }
-            .products {
-                 justify-content: center; 
-                 gap: 20px;
-            }
-            .product-card {
-                 width: calc(25% - 20px);
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="assets/styles.css">
+    
 </head>
 <body>
 
@@ -370,7 +121,7 @@
                 <img src="https://example.com/watsons.png" alt="Watsons">
             </div>
             <div class="sitemap">
-                <h3>SITEMAP</h3>
+                <h3>WEBPAGE</h3>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Products</a></li>
