I have commited changes

--- a/productspage-conditioner.html
+++ b/productspage-conditioner.html
@@ -17,17 +17,19 @@
 <body>
 
     <div class="header">
-        <img src="assets\Cream silk logo.webp" alt="Cream Silk Logo">
         <div class="nav">
+            <a href="#">
+                <img src="assets\Cream silk logo.webp" alt="Cream Silk Logo">
+            </a>
             <a href="#">Products</a>
             <a href="#">About Us</a>
         </div>
         <div class="search-bar">
             <i class="fa fa-search" aria-hidden="true"></i>
             <input type="text" placeholder="Search...">
-            <i class="fa fa-microphone" aria-hidden="true"></i>
         </div>
     </div>
+    
 
     <div class="golden-line"></div> 
 
@@ -112,40 +114,47 @@
     </div>
 
     <div class="golden-section"></div>
-    <div class="pink-line"></div>
 
     <footer class="footer">
-        <div class="container">
-            <div class="shop-now">
-                <h3>SHOP NOW AT</h3>
-                <img src="https://example.com/lazada.png" alt="Lazada">
-                <img src="https://example.com/shopee.png" alt="Shopee">
-                <img src="https://example.com/watsons.png" alt="Watsons">
-            </div>
-            <div class="sitemap">
-                <h3>SITEMAP</h3>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">About Us</a></li>
-                </ul>
-            </div>
-            <div class="join-pack">
+    <div class="container">
+        <div class="shop-now">
+            <h3>SHOP NOW AT</h3>
+            <img src="assets\Lazada logo.png" alt="Lazada">
+            <img src="assets\Shopee logo.png" alt="Shopee">
+            <img src="assets\watsons logo.png" alt="Watsons">
+        </div>
+        <div class="sitemap">
+            <h3>NAVIGATION</h3>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+        </div>
+        <div class="join-pack">
                 <h3>JOIN THE PACK!</h3>
+                <div class="social-icons">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-youtube"></i>
+                    <i class="fas fa-times"></i>
+                </div>
+                <hr class="golden-line">
                 <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
                 <input type="email" placeholder="Email Address">
                 <button>SIGN UP</button>
             </div>
-        </div>
-        <div class="bottom">
-            <p>©2024 Unilever. All rights reserved.</p>
-            <a href="#">Privacy Notice</a> |
-            <a href="#">Legal</a> |
-            <a href="#">Cookie Notice</a> |
-            <a href="#">Sitemap</a> |
-            <a href="#">Accessibility</a>
-        </div>
-    </footer>
+    </div>
+    <div class="bottom">
+        <p>©2024 Unilever. All rights reserved.</p>
+        <a href="#">Privacy Notice</a> |
+        <a href="#">Legal</a> |
+        <a href="#">Cookie Notice</a> |
+        <a href="#">Navigation</a> |
+        <a href="#">Accessibility</a>
+    </div>
+</footer>
+
 
 </body>
 </html>
