--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cream Silk</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="assets/stylesheet.css">
+</head>
+<body>
+    <div class="header">
+        <img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo">
+        <div class="nav">
+            <a href="productspage-conditioner.html">Products</a>
+            <a href="about-us-page.html">About Us</a>
+        </div>
+        <div class="search-bar">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <input type="text" placeholder="Search...">
+            <i class="fa fa-microphone" aria-hidden="true"></i>
+        </div>
+    </div>
+
+    <div class="golden-line"></div>
+
+    <div class="banner">
+        <img src="assets/creamsilk-banner.jpg" alt="Banner Image">
+        <div class="banner-text">
+            <h1>BE CONDITIONED FOR GREATER</h1>
+            <p>OUR SOLUTION FOR THE MODERN FILIPINA HERE:</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>&copy; 2024 Cream Silk. All Rights Reserved.</p>
+    </div>
+</body>
+</html>
