--- a/index.html
+++ b/index.html
@@ -36,9 +36,40 @@
             <p>OUR SOLUTION FOR THE MODERN FILIPINA HERE:</p>
         </div>
     </div>
+    
+    <div class="golden-section"></div>
 
-    <div class="footer">
-        <p>&copy; 2024 Cream Silk. All Rights Reserved.</p>
-    </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="shop-now">
+                <h3>SHOP NOW AT</h3>
+                <img src="https://example.com/lazada.png" alt="Lazada">
+                <img src="https://example.com/shopee.png" alt="Shopee">
+                <img src="https://example.com/watsons.png" alt="Watsons">
+            </div>
+            <div class="sitemap">
+                <h3>WEBPAGE</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </div>
+            <div class="join-pack">
+                <h3>JOIN THE PACK!</h3>
+                <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
+                <input type="email" placeholder="Email Address">
+                <button>SIGN UP</button>
+            </div>
+        </div>
+        <div class="bottom">
+            <p>©2024 Unilever. All rights reserved.</p>
+            <a href="#">Privacy Notice</a> |
+            <a href="#">Legal</a> |
+            <a href="#">Cookie Notice</a> |
+            <a href="#">Sitemap</a> |
+            <a href="#">Accessibility</a>
+        </div>
+    </footer>
 </body>
 </html>
