fix the header for the index and  products-cond

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cream Silk</title>
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -15,9 +13,17 @@
 </head>
 <body>
     <div class="header">
-        <img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo">
+        <a href="index.html"><img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo"></a>
         <div class="nav">
-            <a href="productspage-conditioner.html">Products</a>
+            <div class="dropdown">
+                <a href="#">Products</a>
+                <div class="dropdown-content">
+                    <a href="productspage-conditioner.html">Conditioner</a>
+                    <a href="productspage-ultraconditioner.html">Ultra Conditioners</a>
+                    <a href="productspage-lightconditioner.html">Light Conditioners</a>
+                    <a href="productspage-hairtreatment.html">Hair Treatment</a>
+                </div>
+            </div>
             <a href="about-us-page.html">About Us</a>
         </div>
         <div class="search-bar">
@@ -35,24 +41,58 @@
             <h1>BE CONDITIONED FOR GREATER</h1>
             <p>OUR SOLUTION FOR THE MODERN FILIPINA HERE:</p>
         </div>
-    </div>
+    </div> 
     
+    <div class="golden-section"></div>
+
+    <div class="collections">
+        <h2>COLLECTIONS</h2>
+        <div class="collection-items">
+            <div class="card">
+                <img src="assets/ultimate-reborn.png" alt="New Ultimate Reborn Range">
+                <div class="card-content"></div>
+                <p>New Ultimate Reborn Range</p>
+            </div>
+            <div class="card">
+                <img src="assets/keratin-rescue.png" alt="Triple Keratin Rescue">
+                <div class="card-content"></div>
+                <p>Triple Keratin Rescue</p>
+            </div>
+            <div class="card">
+                <img src="assets/powerfusion-collection.jpg" alt="Rich Organics">
+                <div class="card-content"></div>
+                <p>Rich Organics</p>
+            </div>
+            <div class="card">
+                <img src="assets/powerfusion-collection.jpg" alt="Keratin Treatment">
+                <div class="card-content"></div>
+                <p>Keratin Treatment</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="treatment">
+        <div class="golden-section"></div>        
+            <h2>THE SALON EXPERT TREATMENT</h2>
+                <iframe width="1260" height="650" src="https://www.youtube.com/embed/JEzVeqx6jhs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>    
+
     <div class="golden-section"></div>
 
     <footer class="footer">
         <div class="container">
             <div class="shop-now">
                 <h3>SHOP NOW AT</h3>
-                <img src="https://example.com/lazada.png" alt="Lazada">
-                <img src="https://example.com/shopee.png" alt="Shopee">
-                <img src="https://example.com/watsons.png" alt="Watsons">
+                <img src="assets/Lazada logo.png" alt="Lazada">
+                <img src="assets/Shopee logo.png" alt="Shopee">
+                <img src="assets/watsons logo.png" alt="Watsons">
             </div>
-            <div class="sitemap">
+            <div class="webpage">
                 <h3>WEBPAGE</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">Products</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="about-us-page.html">About Us</a></li>
                 </ul>
             </div>
             <div class="join-pack">
