--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    <link rel="stylesheet" href="assets/stylesheet.css">
     <link rel="stylesheet" href="assets/stylesheet.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var carouselElement = document.getElementById('carouselExampleIndicators');
+            var carousel = new bootstrap.Carousel(carouselElement, {
+                interval: 3600, 
+                wrap: true 
+            });
+            carousel.cycle();
+        });
+    </script>
 </head>
 <body>
     <div class="header">
@@ -35,11 +45,22 @@
 
     <div class="golden-line"></div>
 
-    <div class="banner">
-        <img src="assets/creamsilk-banner.jpg" alt="Banner Image">
-        <div class="banner-text">
-            <h1>BE CONDITIONED FOR GREATER</h1>
-            <p>OUR SOLUTION FOR THE MODERN FILIPINA HERE:</p>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="assets/creamsilk-banner1.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="assets/creamsilk-banner2.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="assets/creamsilk-banner3.png" alt="Third slide">
+            </div>
         </div>
     </div> 
     
@@ -83,11 +104,11 @@
         <div class="container">
             <div class="shop-now">
                 <h3>SHOP NOW AT</h3>
-                <img src="assets/Lazada logo.png" alt="Lazada">
-                <img src="assets/Shopee logo.png" alt="Shopee">
-                <img src="assets/watsons logo.png" alt="Watsons">
+                <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/"><img src="assets/Lazada logo.png" alt="Lazada"></a>
+                <a href="https://shopee.ph/unilever_personalcare?is_from_login=true"><img src="assets/Shopee logo.png" alt="Shopee"></a>
+                <a href="https://www.watsons.com.ph/all-brands/b/154216/creamsilk"><img src="assets/watsons logo.png" alt="Watsons"></a>
             </div>
-            <div class="webpage">
+            <div class="navigation">
                 <h3>WEBPAGE</h3>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -107,9 +128,10 @@
             <a href="#">Privacy Notice</a> |
             <a href="#">Legal</a> |
             <a href="#">Cookie Notice</a> |
-            <a href="#">Sitemap</a> |
+            <a href="#">Navigation</a> |
             <a href="#">Accessibility</a>
         </div>
     </footer>
+    
 </body>
 </html>
