--- a/about-us-page.html
+++ b/about-us-page.html
@@ -3,121 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cream Silk</title>
-
+    <title>Cream Silk | About Us</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-
-    <style>
-        body {
-            font-family: "Open Sans", sans-serif;
-            font-optical-sizing: auto;
-            font-weight: weight;
-            font-style: normal;
-            font-variation-settings:
-            "wdth" 100;
-            margin: 0;
-            padding: 0;
-        }
-        .header {
-            background-color: #ffffff;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .header a {
-            padding: 20px;
-            margin-left: 10px;
-            margin-right: 10px;
-            font-size: 100px;
-        }
-
-        .nav {
-            display: flex;
-            gap: 20px;
-        }
-        .nav a {
-            text-decoration: none;
-            color: #D21885;
-            font-weight: bold;
-            font-size: 16px;
-        }
-        .search-bar {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-            border: 2px solid #CF388D;
-            padding: 5px;
-            border-radius: 25px;
-            margin-right: 20px; 
-        }
-        .search-bar input {
-            border: none;
-            outline: none;
-            padding: 5px;
-            border-radius: 25px;
-        }
-        .search-bar i {
-            color: #D21885;
-        }
-        .search-bar button {
-            border: none;
-            background: none;
-            cursor: pointer;
-        }
-        .search-bar img {
-            height: 20px;
-            width: 20px;
-        }
-        .golden-line {
-            height: 4px;
-            background-color: #C49F24;
-            margin: 0;
-        }
-        .banner {
-            text-align: center;
-            background-color: white;
-            color: #CF388D;
-            padding: 0; 
-            margin: 0; 
-        }
-        .content {
-            text-align: center;
-            padding: 0; 
-            background-color: #fdfdfd;
-            margin: 0; 
-        }
-        .footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #f1f1f1;
-            color: #333;
-        }
-        @media (min-width: 1024px) { 
-            .search-bar {
-                width: 300px; 
-            }
-            .search-bar input {
-                width: 100%; 
-            }
-            .nav a {
-                font-size: 24px; 
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="assets/about-us-style.css">
 </head>
 <body>
-
     <div class="header">
+        <a href="index.html"><img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo"></a>
         <div class="nav">
-            <a href="#">Products</a>
-            <a href="#">About Us</a>
+            <div class="dropdown">
+                <a href="#">Products</a>
+                <div class="dropdown-content">
+                    <a href="productspage-conditioner.html">Conditioner</a>
+                    <a href="productspage-ultraconditioner.html">Ultra Conditioners</a>
+                    <a href="productspage-lightconditioner.html">Light Conditioners</a>
+                    <a href="productspage-hairtreatment.html">Hair Treatment</a>
+                </div>
+            </div>
+            <a href="about-us-page.html">About Us</a>
         </div>
         <div class="search-bar">
             <i class="fa fa-search" aria-hidden="true"></i>
@@ -126,19 +32,68 @@
         </div>
     </div>
 
-    <div class="golden-line"></div> 
+    <div class="golden-line"></div>
 
     <div class="banner">
-        <h1>ABOUT US</h1>
+        <div class="banner-content">
+            <div class="text">
+                <h1>WE ARE UNILEVER</h1>
+                <p>Established over 100 years ago, we are one of the world’s largest consumer goods companies. We are known for our great brands and our belief that doing business the right way drives superior performance.</p>
+            </div>
+            <div class="logo">
+                <img src="assets/unilever logo.png" alt="Unilever Logo">
+            </div>
+        </div>
     </div>
 
-    <div class="content">
-        <p>Welcome to Cream Silk. We are dedicated to providing the best hair care products to ensure your hair is always looking its best.</p>
+    <div class="golden-section"></div>
+
+    <div class="section">
+        <h2>NOTHING CONDITIONS LIKE CREAMSILK</h2>
+        <p>Creamsilk Philippines, the country’s most trusted conditioner brand, brings to Filipinas superior conditioning at its core by offering a wide array of conditioners for shiny hair.</p>
+        <img src="assets/condition-greater.jpg" alt="Creamsilk Image">
     </div>
 
-    <div class="footer">
-        <p>&copy; 2024 Cream Silk. All Rights Reserved.</p>
+    <div class="history">
+        <h2>OUR HISTORY</h2>
+        <p>Creamsilk is manufactured by Unilever Philippines, and has been at the forefront of developing the conditioner market in the Philippines since 1984, providing expert solutions with specially formulated ingredients to address women’s unique hair needs. It expanded its product line in 2002 by introducing leave-on conditioners and treatment in 2007.</p>
+        <p>With 30 years of experience in hair care, Creamsilk is the expert in Filipina hair, using the most superior technology used as a market benchmark. Because shampoos alone can strip hair of its natural moisture, Creamsilk conditioners moisturize hair and condition it like no other.</p>
     </div>
+
+    <div class="golden-section"></div>
+    
+    <footer class="footer">
+        <div class="container">
+            <div class="shop-now">
+                <h3>SHOP NOW AT</h3>
+                <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/"><img src="assets/Lazada logo.png" alt="Lazada"></a>
+                <a href="https://shopee.ph/unilever_personalcare?is_from_login=true"><img src="assets/Shopee logo.png" alt="Shopee"></a>
+                <a href="https://www.watsons.com.ph/all-brands/b/154216/creamsilk"><img src="assets/watsons logo.png" alt="Watsons"></a>
+            </div>
+            <div class="navigation">
+                <h3>WEBPAGE</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="about-us-page.html">About Us</a></li>
+                </ul>
+            </div>
+            <div class="join-pack">
+                <h3>JOIN THE PACK!</h3>
+                <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
+                <input type="email" placeholder="Email Address">
+                <button>SIGN UP</button>
+            </div>
+        </div>
+        <div class="bottom">
+            <p>©2024 Unilever. All rights reserved.</p>
+            <a href="#">Privacy Notice</a> |
+            <a href="#">Legal</a> |
+            <a href="#">Cookie Notice</a> |
+            <a href="#">Navigation</a> |
+            <a href="#">Accessibility</a>
+        </div>
+    </footer>
 
 </body>
 </html>
