--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
+    
     <div class="header">
         <a href="index.html"><img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo"></a>
         <div class="nav">
@@ -29,7 +30,6 @@
         <div class="search-bar">
             <i class="fa fa-search" aria-hidden="true"></i>
             <input type="text" placeholder="Search...">
-            <i class="fa fa-microphone" aria-hidden="true"></i>
         </div>
     </div>
 
@@ -109,7 +109,7 @@
             <div class="join-pack">
                 <h3>JOIN THE PACK!</h3>
                 <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
-                <input type="email" placeholder="Email Address">
+                <input type="email" placeholder="Email Address" required>
                 <button>SIGN UP</button>
             </div>
         </div>
