--- a/productspage-conditioner.html
+++ b/productspage-conditioner.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <!--==CSS LINK-->
-    <link rel="stylesheet" href="assets\styles.css">
+    <link rel="stylesheet" href="assets\products-page-styles.css">
 
 </head>
 <body>
