updated footer of index

--- a/index.html
+++ b/index.html
@@ -93,26 +93,35 @@
     <footer class="footer">
         <div class="container">
             <div class="shop-now">
-                <h1>SHOP NOW AT</h3>
+                <h3>SHOP NOW AT</h3>
                 <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/"><img src="assets/Lazada logo.png" alt="Lazada"></a>
                 <a href="https://shopee.ph/unilever_personalcare?is_from_login=true"><img src="assets/Shopee logo.png" alt="Shopee"></a>
                 <a href="https://www.watsons.com.ph/all-brands/b/154216/creamsilk"><img src="assets/watsons logo.png" alt="Watsons"></a>
             </div>
             <div class="navigation">
-                <h3>WEBPAGE</h3>
+                <h3>NAVIGATION</h3>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="#">Products</a></li>
-                    <li><a href="about-us-page.html">About Us</a></li>
+                    <li><a href="#">About Us</a></li>
                 </ul>
             </div>
             <div class="join-pack">
-                <h3>JOIN THE PACK!</h3>
-                <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
-                <input type="email" placeholder="Email Address" required>
-                <button>SIGN UP</button>
-            </div>
+                    <h3>JOIN THE PACK!</h3>
+                    <div class="social-icons">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-youtube"></i>
+                        <i class="fas fa-times"></i>
+                    </div>
+                    <hr class="golden-line">
+                    <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
+                    <input type="email" placeholder="Email Address" required>
+                    <button>SIGN UP</button>
+                </div>
         </div>
+    
+        <div class="golden-line-footer"></div> 
         <div class="bottom">
             <p>©2024 Unilever. All rights reserved.</p>
             <a href="#">Privacy Notice</a> |
@@ -122,6 +131,7 @@
             <a href="#">Accessibility</a>
         </div>
     </footer>
+    
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             var carouselElement = document.getElementById('carouselExampleIndicators');
