--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    <link rel="stylesheet" href="assets/stylesheet.css">
-    <link rel="stylesheet" href="assets/stylesheet.css">
+    <link rel="stylesheet" href="assets/css/stylesheet.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
@@ -43,13 +43,13 @@
           </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/creamsilk-banner1.png" alt="First slide">
+                <img class="d-block w-100" src="assets/images/creamsilk-banner1.png" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="assets/creamsilk-banner2.jpg" alt="Second slide">
+                <img class="d-block w-100" src="assets/images/creamsilk-banner2.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="assets/creamsilk-banner3.png" alt="Third slide">
+                <img class="d-block w-100" src="assets/images/creamsilk-banner3.png" alt="Third slide">
             </div>
         </div>
     </div> 
@@ -60,22 +60,22 @@
         <h1>COLLECTIONS</h1>
         <div class="collection-items">
             <div class="card">
-                <img src="assets/ultimate-reborn.png" alt="New Ultimate Reborn Range">
+                <img src="assets/images/ultimate-reborn.png" alt="New Ultimate Reborn Range">
                 <div class="card-content"></div>
                 <p>New Ultimate Reborn Range</p>
             </div>
             <div class="card">
-                <img src="assets/keratin-rescue.png" alt="Triple Keratin Rescue">
+                <img src="assets/images/keratin-rescue.png" alt="Triple Keratin Rescue">
                 <div class="card-content"></div>
                 <p>Triple Keratin Rescue</p>
             </div>
             <div class="card">
-                <img src="assets/powerfusion-collection.jpg" alt="Rich Organics">
+                <img src="assets/images/powerfusion-collection.jpg" alt="Rich Organics">
                 <div class="card-content"></div>
                 <p>Rich Organics</p>
             </div>
             <div class="card">
-                <img src="assets/powerfusion-collection.jpg" alt="Keratin Treatment">
+                <img src="assets/images/powerfusion-collection.jpg" alt="Keratin Treatment">
                 <div class="card-content"></div>
                 <p>Keratin Treatment</p>
             </div>
@@ -94,9 +94,9 @@
         <div class="container">
             <div class="shop-now">
                 <h3>SHOP NOW AT</h3>
-                <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/"><img src="assets/Lazada logo.png" alt="Lazada"></a>
-                <a href="https://shopee.ph/unilever_personalcare?is_from_login=true"><img src="assets/Shopee logo.png" alt="Shopee"></a>
-                <a href="https://www.watsons.com.ph/all-brands/b/154216/creamsilk"><img src="assets/watsons logo.png" alt="Watsons"></a>
+                <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/"><img src="assets/images/Lazada logo.png" alt="Lazada"></a>
+                <a href="https://shopee.ph/unilever_personalcare?is_from_login=true"><img src="assets/images/Shopee logo.png" alt="Shopee"></a>
+                <a href="https://www.watsons.com.ph/all-brands/b/154216/creamsilk"><img src="assets/images/watsons logo.png" alt="Watsons"></a>
             </div>
             <div class="navigation">
                 <h3>NAVIGATION</h3>
@@ -131,7 +131,7 @@
             <a href="#">Accessibility</a>
         </div>
     </footer>
-    
+
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             var carouselElement = document.getElementById('carouselExampleIndicators');
