--- a/about-us-page.html
+++ b/about-us-page.html
@@ -53,6 +53,8 @@
         <p>Creamsilk Philippines, the country’s most trusted conditioner brand, brings to Filipinas superior conditioning at its core by offering a wide array of conditioners for shiny hair.</p>
         <img src="assets/images/condition-greater.jpg" alt="Creamsilk Image">
     </div>
+    
+    <div class="golden-section"></div>
 
     <div class="history">
         <h2>OUR HISTORY</h2>
