--- a/conditioner-prod1.html
+++ b/conditioner-prod1.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/products-page-styles.css">
+    <link rel="stylesheet" href="assets/single-products-style.css">
 
 </head>
 <body>
@@ -39,11 +39,10 @@
         <h1>OUR CONDITIONER COLLECTION</h1>
     </div>
 
-    <link rel="stylesheet" href="single-products-style.css">
 </head>
 <body>
     <div class="container">
-        <div class="header">
+        <div class="card1">
             <img src="path_to_image.png" alt="Cream Silk Ultimate Reborn Standout Straight Tri-Oleo Conditioner">
             <h1>CREAM SILK ULTIMATE REBORN STANDOUT STRAIGHT TRI-OLEO CONDITIONER</h1>
             <p>10X STRAIGHTER HAIR Standout Straight with Frizz Defense Complex to make unruly and frizzy hair straighter, smoother, with less frizz</p>
